# solar-returns

./: .gitignore  config.yaml  main.py  pyproject.toml
bruno/: opencollection.yml
bruno/GivEnergy/: Get - Grid to battery.yml  Get - PV to home.yml  Get Solar Used.yml  Get energy flow.yml  folder.yml
bruno/Octopus/: Export data.yml  Get Account Tariff.yml  Get Rates.yml  Import data.yml  folder.yml
bruno/environments/: default.yml
config/: settings.py
data/: solar_return_old.xlsx  ~$solar_return_old.xlsx
src/: calculations.py  excel_writer.py  givenergy_api.py  octopus_api.py
