[project]
name = "solar-returns"
version = "0.1.0"
description = ""
authors = [
    {name = "Bhavesh Valand",email = "brvaland@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "python-dateutil (>=2.8.2,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
